Multiple major fixes in testing